# tenWA

./: Cargo.toml  README.md  build.rs  package.json
guest-js/: index.ts  package.json
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: auth_status_update.toml  get_engine_status.toml  logout_whatsapp.toml  open_whatsapp.toml  save_config_val.toml  send_message_with_media.toml
permissions/schemas/: schema.json
src/: commands.rs  config.rs  injections.rs  lib.rs  state.rs
