[package]
name = "tauri-plugin-tenwa"
version = "0.1.0"
authors = ["you"]
edition = "2021"
links = "tauri-plugin-tenwa"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
